<resources>
    <string name="app_name">Photo Bank</string>
    <string name="btn_signin_with_facebook">Sign in with Facebook</string>
    <string name="btn_signin_with_google">Sign in with Google</string>
    <string name="Text_username">username</string>
    <string name="Text_password">Password</string>
    <string name="Button_login">Login</string>
    <string name="Text_forgetpass">forgetpwd</string>
    <string name="fname_hint">Enter First Name</string>
    <string name="lname_hint">Enter Last Name</string>
    <string name="email_hint">Enter Email</string>
    <string name="Button_forgetpwd">forget password ?</string>
    <string name="password_mismatch">Passwords should match</string>
    <string name="password_hint">Password</string>
    <string name="cnf_password_hint">Confirm Password</string>
    <string name="invalid_password">Password should atleast be 6 characters long</string>
    <string name="signup">SIGNUP</string>
    <string name="link_login">Already have an account? Login In here</string>
    <string name="invalid_username">Please enter a valid Email</string>
    <string name="empty_password">Please enter your password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="signup_text">Dont have an account? Sign up here</string>
    <string name="sign_in_button_text">SIGN IN</string>
    <string name="Button_signup">signup</string>
    <string name="Hint_enter_username">enter username</string>
    <string name="Hint_enterpwd">enter password</string>
    <string name="Text_signup">Sign up</string>
    <string name="TextView">FullView</string>
    <string name="TextView1">Full Name</string>
    <string name="hint">enter your Full Name</string>
    <string name="Text">enter your Full Name</string>
    <string name="FName">Full Name :</string>
    <string name="key_name">NAME</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Helplines</item>
        <item>Defence Tips</item>
        <item>Tactics</item>
        <item>Share App</item>
        <item>Police Stations</item>
        <item>About App</item>
    </string-array>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="desc_list_item_icon">Item Icon</string>
    <string name="Textfn">Name</string>
    <string name="Tvmail">Mail-Id</string>
    <string name="Tvtext">Mail-Id :</string>
    <string name="Text1">Mail-Id :</string>
    <string name="Tvphno">Phone No :</string>
    <string name="HintPh">phone</string>
    <string name="Textpwdsign">Password</string>
    <string name="Textpwdsignu">Password :</string>
    <string name="Btsignup">Signing up..</string>
    <string name="Hintmail">enter mail-id</string>
    <string name="select">select</string>
    <string name="layout">layout</string>
    <string name="share_album">share album</string>
    <string name="share_app">share app</string>
    <string name="rate_us">rate us</string>
    <string name="settings">settings</string>
    <string name="sort_by">sort by</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="camera">camera</string>
    <string name="search">search</string>
    <string name="create_folder">create_folder</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
</resources>
