<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:text="@string/Btsignup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="143dp" />

    <TextView
        android:id="@+id/tvfn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/FName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/etfn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etfn"
        tools:text="@string/FName"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tvpn"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginBottom="39dp"
        android:layout_marginTop="43dp"
        android:text="@string/Tvphno"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/tvpwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvmail"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tvpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/Textpwdsignu"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/etfn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvfn"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="135dp" />

    <EditText
        android:id="@+id/etmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:hint="@string/Hintmail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/etfn"
        app:layout_constraintTop_toBottomOf="@+id/etfn"
        tools:layout_editor_absoluteX="135dp" />

    <EditText
        android:id="@+id/etpn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/HintPh"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@+id/etmail"
        app:layout_constraintTop_toBottomOf="@+id/etmail"
        tools:layout_editor_absoluteX="135dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Hint_enterpwd"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/etpn"
        tools:layout_editor_absoluteY="180dp"
        tools:layout_editor_absoluteX="135dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        tools:layout_editor_absoluteY="247dp"
        tools:layout_editor_absoluteX="37dp"
        android:id="@+id/editText" />
</android.support.constraint.ConstraintLayout>