<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:id="@+id/coordinator_layout"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:fb="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dimenLayoutMargin"
                tools:context=".SignInActivity" >



                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dividerHeight"
                    android:background="@color/light_grey"
                    android:layout_marginBottom="@dimen/dimenMarginBottom"
                    />

                <EditText android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email" />


                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password"/>


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimenMarginTop"
                    android:layout_marginBottom="@dimen/dimenMarginBottom"
                    android:padding="@dimen/padding"
                    android:textSize="@dimen/textSize"
                    android:textColor="@color/text_white"
                    android:background="@color/colorPrimary"
                    android:text="@string/sign_in_button_text"/>


                <TextView android:id="@+id/link_signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_bottom"
                    android:text="@string/signup_text"
                    android:gravity="center"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/textSize"/>


            </LinearLayout>

        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteY="354dp"
        tools:layout_editor_absoluteX="69dp"
        android:id="@+id/imageView" />

</android.support.constraint.ConstraintLayout>
